# saas-sync

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  schema.sql  wrangler.toml
data/slack/: new-thread.json  thread-replied-bot.json  thread-replied.json  unknown-thread-reply.json
data/trello/: card-archived.json  card-comment-added-from-api.json  card-comment-added.json  card-copied.json  card-description-edited.json  card-moved.json  card-title-changed.json
src/: account.rs  action.rs  database.rs  lib.rs  slack.rs  trello.rs
