[package]
name = "saas-sync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.3.0", features = ["d1"] }
serde = { version = "1", features = ["default", "derive", "serde_derive"] }
serde_json ="1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
getrandom = { version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
